# DeepVisionWorkbench

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/resource/: res.qrc
src/resource/styles/: CsvAnalyzeWidget.qss  ExperimentRecordsWidget.qss  ImportExperimentDialog.qss  MainWindow.qss
src/utils/: qcustomplot.cpp
src/widget/: CsvAnalyzeWidget.cpp  CsvAnalyzeWidget.h  CsvAnalyzeWidget.ui  ExperimentLibraryWidget.ui  ExperimentRecordsWidget.cpp  ExperimentRecordsWidget.h  ExperimentRecordsWidget.ui  ImportExperimentDialog.cpp  ImportExperimentDialog.h  ImportExperimentDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
